--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,8 +1,10 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: uab-dtic # Your GitHub organization or username, where this repository lives
+repo: guacamole-uab-monitoring # The name of this repository
 
 sites:
+  - name: guaca-sbd
+    url: https://aules.sbd.uab.cat/guacamole/
   - name: Google
     url: https://www.google.com
   - name: Wikipedia
@@ -15,10 +17,13 @@ sites:
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
+  #JRM;cname: demo.upptime.js.org
   # baseUrl: /your-repo-name
+  baseUrl: /guacamole-uab-monitoring
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
+  #JRM;name: Upptime
+  name: guacamole@uab upptime
+  
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
   introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
