--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -4,7 +4,7 @@ repo: guacamole-uab-monitoring # The name of this repository
 
 sites:
   - name: guaca-med
-    url: https://guacamed.uab.cat/guacamole/
+    url: http://guacamed.uab.cat/guacamole/
   - name: guaca-cib
     url: https://alvocatcib.uab.cat/guacamole/
   - name: guaca-sbd
